--- a/index.html
+++ b/index.html
@@ -7,6 +7,117 @@
     <link rel="stylesheet" href="./style/style.css" class="css">
 </head>
 <body>
+    <header>
+        <nav>
+            <h1 class="logo"><i>Fitness</i></h1>
+            <div class="menu">
+                <button class="btn_primary">Home</button>
+                <a href="#">Service</a>
+                <a href="#">Contact</a>
+                <a href="#">About</a>
+            </div>
+        </nav>
+        <!-- hero section -->
+        <div class="hero">
+            <div class="hero_content">
+                <h1 class="hero_title">
+                    Get body in <span>shape</span>& stay healthy
+                </h1>
+                <p>A huge selection of health and fitness content, healthy recipes
+                    and transformation stories to help you get fit and stay fit!</p>
+                    <button class="btn_primary join_btn">Join Club Now</button>
+                    <button class="btn_primary download_btn">Download App</button>
+            </div>
+            <div class="hero_img">
+                <img src="./images/Images 2.png" alt="">
+                <div class="five_hundred">
+                    <h1>500+</h1>
+                    <p>Free Workout Videos</p>
+                </div>
+                <div class="three_fifty">
+                    <div class="red_circle"></div>
+                    <div>
+                        <h1>350+</h1>
+                        <p>Video tutorial</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+<!-- main -->
+ <!-- change_your_habits -->
+    <main>
+        <section class="change_your_habits">
+            <h1 class="section_title">Change Your Habits</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="change_your_habits_cards">
+                <div class="change_your_habits_card">
+                    <img src="./images/image 3.png" alt="">
+                    <h2>Movement</h2>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="change_your_habits_card">
+                    <img src="./images/image 2.png" alt="">
+                    <h2>Time</h2>
+                    <p>We believe fitness should be
+                        accessible to everyone</p>
+                </div>
+                <div class="change_your_habits_card">
+                    <img src="./images/image 4.png" alt="">
+                    <h2>Practice</h2>
+                    <p>We believe fitness should be
+                        accessible to everyone</p>
+                </div>
+                <div class="change_your_habits_card">
+                    <img src="./images/image 5.png" alt="">
+                    <h2>Weight Loss</h2>
+                    <p>We believe fitness should be
+                        accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+        <section class="run_extra">
+            <div class="run_extra_content">
+                <h1 class="section_title">
+                    Run an Extra Mile Easily
+                </h1>
+                <p>
+                    We believe fitness should be accessible to everyone,
+                    everywhere, regardless of income or access to a gym. With
+                    hundreds of professional workouts. 
+                </p>
+                <button class="btn_primary join_btn">Join Now</button>
+            </div>
+            <div class="run">
+                <img src="./images/run.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="training">
+            <h1 class="section_title">Training and excercises</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="photo_gallery">
+                <div class="blue">
+                    <img src="./images/exercise1.jpg" alt="">
+                </div>
+                <div class="redish">
+                    <img src="./images/exercise2.png" alt="">
+                </div>
+                <div class="greyish">
+                    <img src="./images/exercise3.png" alt="">
+                </div>
+                <div class="blackish">
+                    <img src="./images/exercise4.png" alt="">
+                </div>
+                <div class="greenish">
+                    <img src="./images/exercise5.jpg" alt="">
+                </div>
+                <div class="coolish">
+                    <img src="./images/exercise6.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
