--- a/index.html
+++ b/index.html
@@ -169,6 +169,42 @@
             </div>
           </div>
         </div>
+        <div class="meet_our_team">
+            <h1 class="section_title">Meet Our Team</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="team_members">
+                <div class="team_member_card">
+                    <img src="./images/trainer1.png" alt="">
+                    <h4>Jerome Bell</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team_member_card">
+                    <img src="./images/trainer2.png" alt="">
+                    <h4>Cameron William</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team_member_card">
+                    <img src="./images/trainer3.png" alt="">
+                    <h4>Darrell Steward              </h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team_member_card">
+                    <img src="./images/trainer4.png" alt="">
+                    <h4>Dianne Russell</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team_member_card">
+                    <img src="./images/trainer5.png" alt="">
+                    <h4>Cody Fisher</h4>
+                    <p>Trainer</p>
+                </div>
+                <div class="team_member_card">
+                    <img src="./images/trainer6.png" alt="">
+                    <h4>Theresa Webb</h4>
+                    <p>Trainer</p>
+                </div>
+            </div>
+        </div>
     </main>
     
 </body>
