--- a/index.html
+++ b/index.html
@@ -206,6 +206,34 @@
             </div>
         </div>
     </main>
+
+    <!-- footer -->
+     <footer>
+        <div class="footer">
+        <div class="footer_logo footer_card">
+            <h1 class="logo"><i>Fitness</i></h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+        </div>
+        <div class="footer_card">
+            <h2>Get Started</h2>
+            <p>Service</p>
+            <p>Contact Us</p>
+            <p>Affiliate Program</p>
+            <p>About Us</p>
+        </div>
+        <div class="footer_card">
+            <h2>Go Ahead</h2>
+            <p>Fitness</p>
+            <p>Platform</p>
+            <p>Workout Libary</p>
+            <p>App Design</p>
+        </div>
+        </div>
+        <div class="copyright">
+        <hr>
+        <p>All right reserved @Fitness 2024</p>
+        </div>
+     </footer>
     
 </body>
 </html>
