added_extraa_section

--- a/index.html
+++ b/index.html
@@ -205,6 +205,14 @@
                 </div>
             </div>
         </div>
+        <div class="get_started">
+            <h1 class="section_title">How to get started...</h1>
+            <p>If you’re a gym owner and you’re interested in getting members on demand and running your business by the numbers – schedule a call by clicking the button below. </p>
+            <br>
+            <p>Somebody from our team will meet with you on a call to see if Big Little Gyms is a good fit. 
+            </p>
+            <button class="btn_primary join_btn">Get Started</button>
+        </div>
     </main>
 
     <!-- footer -->
